css-files/index.css
:root {
  --dashboard-bg-color: #0ea5e9;
  --dashboard-text-color: white;
  --button-text-color: white;
  --card-bg-color: white;
  --card-description-color: #4b5563ac;
  --card-title-color: black;
  --top-banner-text-color: #323943;
  --searchbar-icon-color: #1e293b;
  --searchbar-color: #b4bac566;
  --top-banner-bg-color: #f8fafc;
  --main-dashboard-box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
  --main-dashboard-color: #e2e8f0;
  --card-border: #fde047;
  --card-color: #f8fafc;
  --card-box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
  --announcement-card-bottom: #45484d66;

}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', 'Open Sans', sans-serif;
}

.prof-pic {
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  align-items: center;
}

ul {
  list-style-type: none;
}

body {
  height: 100vh;
  width: 100%;
  margin: 0px;
  padding: 0px;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
  display: grid;
  grid-template-columns: max(250px, 20%) max(80vh, 80%);
  grid-template-rows: max-content 1fr;
  grid-template-areas: 
  "dashboard-menu top-banner"
  "dashboard-menu  main-dashboard"
  ;
}

body::-webkit-scrollbar {
  display: none;
}

#dashboard-menu {
  grid-area: dashboard-menu;
  background-color: var(--dashboard-bg-color);
  color: var(--dashboard-text-color);
  display: grid;
  padding: 20px;
  grid-template-rows: 1fr 10fr;
  
}


#burger {
  grid-row: 1 / 2;
  min-height: 100px;
  font-size: 24px;
  font-weight: 700;
}

#options {
  display: grid;
  grid-template-rows: 10fr;
  gap: 5px;
}

#options * {
  font-size: 18px;
  font-weight: 600;
}

#options ul {
  display: grid;
  grid-template-rows: repeat(9, clamp(30px, 8%, 50px));
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#options ul li {
  display: grid;
  grid-template-columns: 1fr 9fr;
  column-gap: max(10px,10%);
}


#options ul::-webkit-scrollbar {
  display: none;
}


#top-banner {
  grid-area: top-banner;
  background-color: var(--top-banner-bg-color);
  display: grid;
  grid-template-columns: 5fr 2fr;
  grid-template-rows: 2fr 3fr;
  padding: 10px 5%;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#top-banner::-webkit-scrollbar {
  display: none;
}

#top-banner .top-left {
  grid-area: 1 / 1 / 2 / 2;
  display: flex;
  align-items: center;
  
}

.top-left input[id="search"] {
  margin-right: 10px;
  margin-left: 10px;
  width: 100%;
  background-color: var(--searchbar-color);
  height: 28px;
  border-radius: 15px;
  border: none;
}

#top-banner .top-right {
  grid-area: 1 / 2 / 2 / 3;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  font-size: 18px;
  font-weight: 600;
}

#top-banner .top-right div {
  display: flex;
  align-items: center;
  /* margin-left: 15px; */
  color: var(--searchbar-icon-color);
}

.top-right .prof-pic {
  max-width: 80px;
}

img {
  width: 2.5em;
  height: 2.5em;
  border-radius: 100%;
  overflow: hidden;
  border: none;
  object-fit: contain;
}

#top-banner .bottom-left {
  grid-area: 2 / 1 / 3 / 2;
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-template-rows: 1fr 1fr;
  align-items: center;
}

.bottom-left .prof-pic {
  grid-area: 1 / 1 / -1 / 2;

}

.bottom-left img {
  height: 3.5em;
  width: 3.5em;
}

.bottom-left .greeting {
  grid-area: 1 / 2 / 2 / -1;
  display: flex;
  height: 100%;
  align-items: flex-end;
  margin-left: 4px;
  font-size: 16px;
  font-weight: 600;
}

.bottom-left .handle {
  grid-area: 2 / 2 / 3 / 3;
  display: flex;
  height: 100%;
  margin-left: 4px;
  font-size: 18px;
  font-weight: 700;
}

#top-banner .bottom-right {
  grid-area: 2 / 2 / 3 / 3;
  display: flex;
  justify-content: flex-end;
}

#top-banner .bottom-right .create {
  display: flex;
  align-items: center;
}

#main-dashboard {
  grid-area: main-dashboard;
  background-color: var(--main-dashboard-color);
  box-shadow: var(--main-dashboard-box-shadow);
  display: grid;
  grid-template-columns: 5fr 2fr;
  overflow: scroll;
  -ms-overflow-style: none;
  scrollbar-width: none;
}

#main-dashboard::-webkit-scrollbar {
  display: none;
}

.project-cards {
  padding: 15px;
  grid-column: 1 / 2;
  display: grid;
  grid-template-rows: 50px 1fr;
}

.header {
  font-weight: 600;
  font-size: 20px;
}

.project-cards .project-description {
  color: var(--card-description-color);
}

.cards {
  display: grid;
  gap: 15px;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
}

.card {
  box-sizing: border-box;
  height: 100%;
  display: grid;
  grid-template-rows: 20% 60% 20%;
  padding: 10px;
  border-left: solid 8px #fde047;
  background-color: var(--card-color);
  border-radius: 10px;
  box-shadow: var(--card-box-shadow);
}

.project-title, .project-description, .project-icons {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
}

.project-title {
  font-size: 20px;
  font-weight: 600;
}

.project-icons {
  display: flex;
  width: 100%;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-items: center;
}

.project-icons button {
  appearance: none;
  box-sizing: border-box;
  width: 30px;
  margin-right: 10px;
  border-radius: 100%;
  border: none;
  background-color: var(--card-color);
}

.right-side {
  grid-column: 2 / 3;
  display: grid;
  grid-template-rows: 4fr 3fr;
  row-gap: 15px;
  padding: 15px;
}

.announcements {
  grid-row: 1 / 2;
  display: grid;
  grid-template-rows: 50px 1fr;
}


.announcement-cards {
  box-sizing: border-box;
  padding: 20px;
  display: grid;
  border-radius: 15px;
  background-color: var(--card-bg-color);
  grid-template-rows: 1fr 1fr 1fr;
  box-shadow: var(--card-box-shadow);
  /* overflow-y: scroll;
  padding: 0px 20px;
  -ms-overflow-style: none;
  scrollbar-width: none; */
}

/* .announcement-cards::-webkit-scrollbar {
  display: none;
} */



.announcement-card {
  box-sizing: border-box;
  display: grid;
  grid-template-rows: 20px 65px;
}

.announcement-card .title {
  display: grid;
  align-items: flex-end;
  border-top: solid 2px var(--announcement-card-bottom);
  color: var(--card-title-color);
  font-size: 14px;
  font-weight: 600;

}

.announcement-card .description {
  font-size: 12px;
}

.announcement-card:first-child .title{
  border: none;
}



.trending {
  grid-row: 2 / 3;
  display: grid;
  grid-template-rows: 50px 1fr;
}

.trender-cards {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  box-shadow: var(--card-box-shadow);
  background-color: var(--card-bg-color);
  border-radius: 15px;
  font-size: 14px;
}

.trender {
  display: grid;
  grid-template-columns: 1fr 5fr;
  column-gap: 10px;
  padding-left: 10px;
  grid-template-rows: 1fr 1fr;
}



.trender .prof-pic {
  grid-area: 1 / 1 / -1 / 2;
}

.trender .handle, .trender .proj-name {
  display: flex;
  height: 100%;
  align-items: flex-end;
  color: var(--card-title-color);
  font-size: 12px;
}

.trender .proj-name {
  align-items: flex-start;
  color: var(--card-description-color);
}
.announcement {
  display: flex;
  flex-wrap: wrap;
}

.announcement .title {
  width: 100%;
  height: 20px;
}

.announcements .description {
  width: 100%;
  height: calc(100% - 20px);
  color: var(--card-description-color);
}

#top-banner button {
  appearance: none;
  border-radius: 20px;
  height: 40px;
  width: 90px;
  border: none;
  overflow: hidden;
  background-color: var(--dashboard-bg-color);
  color: var(--button-text-color);
  font-weight: 500;
  font-size: 15px;
}

.create {
  display: flex;
  width: 100%;
  justify-content: flex-end;
}

.create li {
  padding-left: 15px;
}

